# refrescar

./: .gitattributes  .gitignore  LICENSE  README.md  dos  touch.txt
01-hola/src/: hola.cpp
02-cuadrado/src/: CMakeLists.txt  cuadrado.cpp
05-descuento/src/: CMakeLists.txt  descuento.cpp
06-polinomio/src/: CMakeLists.txt
07-hipotenusa/src/: hipotenusa.cpp
08-interes/src/: CMakeLists.txt
10-suma/src/: CMakeLists.txt  suma.cpp
11-conversor/src/: CMakeLists.txt
12-primos/src/: programa.cpp
14-ar-geo/src/: programa.cpp
15-factorial/src/: programa.cpp
17-ref-punt/src/: programa.cpp
18-vector/src/: programa.cpp
19-caracteres/src/: programa.cpp
2-cuadrado/src/: CMakeLists.txt  cuadrado.cpp  queprobar.cpp
20-str/src/: programa.cpp
21-string/src/: programa.cpp
22-matrizbidi/src/: programa.cpp
23-array-dyn/src/: programa.cpp
24-struct/src/: ejemplo.cpp  programa.cpp
26-listas/src/: programa.cpp
27-oop/src/: programa.cpp
28-oop-herencia/src/: programa.cpp
29-oop-rpg/src/: arquero.h  caballero.h  mago.h  personaje.h  picaro.h  programa.cpp
4-kilosLibras/src/: libras.cpp
7-hipotenusa/src/: CMakeLists.txt
8-interes/src/: interes.cpp
9-password/src/: CMakeLists.txt
linux-cmake/01-hola/src/: CMakeLists.txt
linux-cmake/03-math/src/: CMakeLists.txt  mates.cpp
linux-cmake/04-kilosLibras/src/: CMakeLists.txt
linux-cmake/06-polinomio/src/: polinomio.cpp
linux-cmake/08-interes/: compila.sh
linux-cmake/09-password/src/: password.cpp
linux-cmake/11-conversor/src/: CMakeLists.txt  conversor.cpp
linux-cmake/12-primos/src/: CMakeLists.txt
linux-cmake/13-estacion/src/: programa.cpp
linux-cmake/16-fibonacci/src/: programa.cpp
linux-cmake/22-matrizbidi/src/: programa.cpp
linux-cmake/25-dental/src/: programa.cpp
linux-cmake/27-oop/src/: programa.cpp
src/: CMakeLists.txt
win-clang/01-hello/: README.md
(+3 files in other folders)
